# motrix-fnos

./: .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.githooks/: pre-commit  pre-push
.github/workflows/: verify.yml
docs/: api-contract.md  architecture.md  development-plan.md  fnos-fpk-architecture.md  fnos-fpk-remediation-plan.md  fnos-manual-test-checklist.md  fpk-packaging.md  motrix-fnos-development-plan.md  runtime-lifecycle-hardening-plan.md  ui-stitch-prompts.md
packaging/fnos/: .gitkeep  manifest
scripts/: build-fpk.mjs  build-server-linux.mjs  build-web-ui-fpk.mjs  fetch-aria2-next.mjs  stage-aria2-sidecar.mjs  tauri-dev.mjs  verify.mjs
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/api/: app.rs  aria2.rs  debug_logs.rs  error.rs  events.rs  extract.rs  mod.rs  settings.rs  tasks.rs
server/src/app/: mod.rs
server/src/aria2/: mod.rs
server/src/config/: aria2.rs
server/src/database/: mod.rs  settings.rs  tasks.rs
server/src/debug_logs/: mod.rs
server/src/runtime/: aria2_process.rs  mod.rs  shutdown.rs  task_monitor.rs
server/src/settings/: service.rs
server/src/state/: mod.rs
server/src/tasks/: mod.rs  service.rs
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: aria2-next-2.4.9-checksums.sha256
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: EngineStatusPanel.vue
src/layouts/: AppShell.vue  SidebarNav.vue  Topbar.vue
src/services/: aria2.ts  backend.ts  http.ts  runtime.ts  runtimeEvents.ts  (+2 more)
(+50 files in other folders)
