[package]
name = "motrix-fnos-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "motrix_fnos_server"
path = "src/lib.rs"

[dependencies]
async-stream = "0.3"
axum = { version = "0.7", features = ["macros"] }
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
trash = "5.2.6"
